--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* color */
 header > .inner > .menu > li a, .btn {
   display: flex;
@@ -50,6 +51,12 @@ img {
 
 p {
   line-height: 1.6;
+}
+
+sup {
+  margin-right: 6px;
+  font-size: 0.7em;
+  vertical-align: top;
 }
 
 .inner {
@@ -133,81 +140,123 @@ a.link::after {
 .infos .infos--end {
   justify-content: flex-end;
 }
-.infos .info {
+
+/* camera stage는 infos 미사용으로 info 별도 관리 */
+.info {
   max-width: 330px;
   margin-bottom: 24px;
   opacity: 0;
   transition: 1s;
   transform: translate(0, 100px);
 }
-.infos .info .icon {
+.info .icon {
   width: 100px;
   height: 100px;
   margin: 0 0 -15px -30px;
   animation: sprite-icon 3s steps(1) infinite;
 }
-.infos .info .icon.icon--chip {
+.info .icon.icon--chip {
   background-image: url("../images/sprite_chip.png");
 }
-.infos .info .icon.icon--faster {
+.info .icon.icon--faster {
   background-image: url("../images/sprite_faster.png");
 }
-.infos .info .icon.icon--neural {
+.info .icon.icon--neural {
   background-image: url("../images/sprite_neural.png");
 }
-.infos .info .icon.icon--apps {
+.info .icon.icon--apps {
   background-image: url("../images/sprite_apps.png");
 }
-.infos .info .icon.icon--battery {
+.info .icon.icon--battery {
   background-image: url("../images/sprite_battery.png");
 }
-.infos .info .icon.icon--display {
+.info .icon.icon--display {
   background-image: url("../images/sprite_display.png");
 }
-.infos .info .icon.icon--true-tone {
+.info .icon.icon--true-tone {
   background-image: url("../images/sprite_true_tone.png");
 }
-.infos .info .icon.icon--center-stage {
+.info .icon.icon--center-stage {
   background-image: url("../images/sprite_center_stage.png");
 }
-.infos .info .icon.icon--front-camera {
+.info .icon.icon--front-camera {
   background-image: url("../images/sprite_front_camera.png");
 }
-.infos .info .icon.icon--back-camera {
+.info .icon.icon--back-camera {
   background-image: url("../images/sprite_back_camera.png");
 }
-.infos .info .icon.icon--scan {
+.info .icon.icon--scan {
   background-image: url("../images/sprite_scan.png");
 }
-.infos .info .icon.icon--download {
+.info .icon.icon--download {
   background-image: url("../images/sprite_download.png");
 }
-.infos .info .icon.icon--wifi {
+.info .icon.icon--wifi {
   background-image: url("../images/sprite_wifi.png");
 }
-.infos .info .icon.icon--lte {
+.info .icon.icon--lte {
   background-image: url("../images/sprite_lte.png");
 }
-.infos .info .icon.icon--pencil {
+.info .icon.icon--pencil {
   background-image: url("../images/sprite_pencil.png");
 }
-.infos .info .icon.icon--keyboard {
+.info .icon.icon--keyboard {
   background-image: url("../images/sprite_keyboard.png");
 }
-.infos .info .icon.icon--notes {
+.info .icon.icon--notes {
   background-image: url("../images/sprite_notes.png");
 }
-.infos .info .icon.icon--covers {
+.info .icon.icon--covers {
   background-image: url("../images/sprite_covers.png");
 }
-.infos .info p {
+.info p {
   font-size: 21.5px;
   font-weight: 600;
   line-height: 1.5;
 }
-.infos .info.show {
+.info a.link {
+  display: block;
+  margin-top: 44px;
+  font-size: 19.5px;
+}
+
+.info.show {
   transform: translate(0, 0);
   opacity: 1;
+}
+
+.infos--large .info {
+  max-width: 440px;
+}
+
+/* White box */
+.whitebox {
+  max-width: 1386px;
+  margin: 0 auto;
+  padding: 100px 30px;
+  border-radius: 30px;
+  box-sizing: border-box;
+  background-color: #fff;
+}
+.whitebox .icon {
+  margin-bottom: 20px;
+}
+.whitebox h1 {
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.whitebox p {
+  margin-top: 20px;
+  font-size: 19px;
+}
+.whitebox a.link {
+  display: block;
+  margin-top: 26px;
+}
+
+.whitebox--transparent {
+  background-color: transparent;
 }
 
 /* HEADER */
@@ -459,13 +508,17 @@ nav > .inner .menu > li.active > a {
   cursor: default;
 }
 
+/* MAIN */
+main {
+  overflow-x: hidden;
+}
+
 /* HERO */
 .hero {
   background-color: #f5f5f5;
 }
 .hero > .inner {
   padding-bottom: 110px;
-  overflow: hidden;
 }
 .hero > .inner > h1 {
   width: 221px;
@@ -567,6 +620,552 @@ nav > .inner .menu > li.active > a {
   height: 46px;
   background-image: url("/images/power_create_caption.png");
   transform: translate(543px, 908px);
+}
+
+/* DISPLAY */
+.display {
+  margin-top: 450px;
+}
+.display .notes h1 {
+  width: 630px;
+  height: 370px;
+  background-image: url("/images/display_headline.png");
+  transform: translate(104px, 0);
+}
+.display .notes .figures {
+  height: 814px;
+  margin-top: 26px;
+}
+.display .notes .figures figcaption {
+  width: 145px;
+  height: 45px;
+  background-image: url("/images/display_notes_caption.png");
+  transform: translate(707px, -16px);
+}
+.display .shareplay {
+  margin-top: 55px;
+}
+.display .shareplay .figures {
+  height: 630px;
+}
+.display .shareplay .figures figure {
+  transform: translate(-360px, 0);
+}
+.display .shareplay .figures figure figcaption {
+  width: 110px;
+  height: 48px;
+  background-image: url("/images/display_shareplay_caption.png");
+  transform: translate(300px, 658px);
+}
+
+/* CAMERA */
+.camera {
+  margin-top: 303px;
+}
+.camera .stage {
+  position: relative;
+}
+.camera .stage h1 {
+  width: 650px;
+  height: 450px;
+  background-image: url("/images/camera_headline.png");
+  transform: translate(-25px, 0);
+}
+.camera .stage .info {
+  position: absolute;
+  top: 150px;
+  right: 0;
+}
+.camera .stage .figures {
+  height: 770px;
+  margin-top: 24px;
+}
+.camera .stage .figures figure {
+  transform: translate(90px, 0);
+}
+.camera .stage .figures figure video {
+  position: absolute;
+  top: 36px;
+  left: 76px;
+  -webkit-mask-image: url("/images/camera_video_mask.png");
+  mask-image: url("/images/camera_video_mask.png");
+}
+.camera .stage .figures figure .controller--play, .camera .stage .figures figure .controller--pause {
+  color: #0071e3;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transform: translate(428px, -134px) rotate(-3deg);
+}
+.camera .stage .figures figure .controller--play:hover, .camera .stage .figures figure .controller--pause:hover {
+  text-decoration: underline;
+}
+.camera .stage .figures figure .controller--play.hide, .camera .stage .figures figure .controller--pause.hide {
+  display: none;
+}
+.camera .stage .figures figure .controller--play img, .camera .stage .figures figure .controller--pause img {
+  width: 20px;
+  margin-top: -2px;
+}
+.camera .stage .figures figure figcaption {
+  width: 130px;
+  height: 110px;
+  background-image: url("/images/camera_hardware_caption.png");
+  transform: translate(-116px, 383px);
+}
+.camera .edit .figures {
+  height: 910px;
+}
+.camera .edit .figures figure {
+  transform: translate(20px, 0);
+}
+.camera .edit .figures figure figcaption {
+  width: 130px;
+  height: 47px;
+  background-image: url("/images/camera_edit_caption.png");
+  transform: translate(27px, 905px);
+}
+
+/* WIRELESS */
+.wireless {
+  margin-top: 202px;
+}
+.wireless .facetime h1 {
+  width: 730px;
+  height: 330px;
+  background-image: url("/images/wireless_headline.png");
+  transform: translate(104px, 0);
+}
+.wireless .facetime .figures {
+  height: 773px;
+}
+.wireless .facetime .figures figure {
+  transform: translate(-68px, 0);
+}
+.wireless .facetime .figures figure figcaption {
+  width: 139px;
+  height: 46px;
+  background-image: url("/images/wireless_facetime_caption.png");
+  transform: translate(843px, -49px);
+}
+.wireless .files figure {
+  transform: translate(34px, -34px);
+}
+.wireless .files figure figcaption {
+  width: 127px;
+  height: 46px;
+  background-image: url("/images/wireless_files_caption.png");
+  transform: translate(96px, 639px);
+}
+
+/* ACCESSORIES */
+.accessories {
+  margin-top: 195px;
+}
+.accessories h1 {
+  width: 550px;
+  height: 343px;
+  background-image: url("/images/accessibility_headline.png");
+  margin: 0 auto;
+}
+.accessories .figures {
+  height: 1021px;
+  margin-top: 34px;
+}
+.accessories .figures figure {
+  transform: translate(-24px, 0);
+}
+.accessories .figures figure figcaption .caption-memo {
+  width: 169px;
+  height: 41px;
+  background-image: url("/images/accessories_caption_memo.png");
+  transform: translate(790px, -52px);
+}
+.accessories .figures figure figcaption .caption-supports {
+  width: 200px;
+  height: 70px;
+  background-image: url("/images/accessories_caption_supports.png");
+  transform: translate(163px, 821px);
+}
+.accessories .infos {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+/* iPadOS */
+.ipados {
+  margin-top: 212px;
+}
+.ipados h1 {
+  width: 530px;
+  height: 440px;
+  margin: 0 auto;
+  background-image: url("/images/ipados_headline.png");
+}
+.ipados .infos {
+  margin-top: 44px;
+  align-items: flex-end;
+}
+.ipados .figures {
+  height: 782px;
+  display: flex;
+}
+.ipados .figures > div {
+  flex-grow: 1;
+  position: relative;
+}
+.ipados .figures > div figure {
+  transform: translate(-205px, -312px);
+}
+.ipados .figures > div figure figcaption {
+  width: 163px;
+  height: 53px;
+  background-image: url("/images/ipados_split_view_caption.png");
+  transform: translate(200px, -38px);
+}
+.ipados .figures .figure-split-view figure {
+  transform: translate(-205px, -312px);
+}
+.ipados .figures .figure-split-view figure figcaption {
+  width: 163px;
+  height: 53px;
+  background-image: url("/images/ipados_split_view_caption.png");
+  transform: translate(200px, -38px);
+}
+.ipados .figures .figure-widgets figure {
+  transform: translate(237px, 43px);
+}
+.ipados .figures .figure-widgets figure figcaption {
+  width: 161px;
+  height: 46px;
+  background-image: url("/images/ipados_widgets_caption.png");
+  transform: translate(257px, 497px);
+}
+.ipados .figures .figure-quick-note figure {
+  transform: translate(-625px, 232px);
+}
+.ipados .figures .figure-quick-note figure figcaption {
+  width: 82px;
+  height: 97px;
+  background-image: url("/images/ipados_quick_note_caption.png");
+  transform: translate(511px, 470px);
+}
+
+/* APPS */
+.apps {
+  margin-top: 368px;
+}
+.apps h1 {
+  width: 500px;
+  height: 264px;
+  background-image: url("/images/apps_headline.png");
+  transform: translate(17px, 0);
+}
+.apps .infos {
+  margin-top: 36px;
+  margin-bottom: 82px;
+}
+.apps .figures {
+  display: flex;
+  height: 788px;
+}
+.apps .figures > div {
+  flex-grow: 1;
+  position: relative;
+}
+.apps .figures .figure-masterclass figure {
+  transform: translate(578px, -431px);
+}
+.apps .figures .figure-masterclass figure figcaption {
+  width: 100px;
+  height: 25px;
+  background-image: url("/images/apps_masterclass_caption.png");
+  transform: translate(26px, 690px);
+}
+.apps .figures .figure-adobe figure {
+  transform: translate(-515px, 85px);
+}
+.apps .figures .figure-adobe figure figcaption {
+  width: 105px;
+  height: 24px;
+  background-image: url("/images/apps_adobe_caption.png");
+  transform: translate(544px, 514px);
+}
+.apps .figures .figure-fantasian figure {
+  transform: translate(-103px, 318px);
+}
+.apps .figures .figure-fantasian figure figcaption {
+  width: 74px;
+  height: 22px;
+  background-image: url("/images/apps_fantasian_caption.png");
+  transform: translate(24px, 483px);
+}
+.apps .figures .figure-books figure {
+  transform: translate(-133px, -150px);
+}
+.apps .figures .figure-books figure figcaption {
+  width: 50px;
+  height: 27px;
+  background-image: url("/images/apps_books_caption.png");
+  transform: translate(397px, 707px);
+}
+.apps .figures .figure-goodnotes figure {
+  transform: translate(-93px, 68px);
+}
+.apps .figures .figure-goodnotes figure figcaption {
+  width: 99px;
+  height: 26px;
+  background-image: url("/images/apps_goodnotes_caption.png");
+  transform: translate(24px, 690px);
+}
+
+/* PRIVACY */
+.privacy {
+  margin-top: 238px;
+}
+.privacy h1 {
+  width: 482px;
+  height: 237px;
+  margin-left: auto;
+  background-image: url("/images/power_headline.png");
+  position: relative;
+  z-index: 1;
+  transform: translate(57px, 0);
+}
+.privacy .infos {
+  margin-top: 38px;
+  align-items: flex-end;
+  position: relative;
+  z-index: 1;
+}
+.privacy figure {
+  transform: translate(-215px, -500px);
+}
+.privacy figure figcaption .caption-apple-id {
+  width: 170px;
+  height: 26px;
+  background-image: url("/images/privacy_caption_apple_id.png");
+  transform: translate(195px, -13px);
+}
+.privacy figure figcaption .caption-touch-id {
+  width: 150px;
+  height: 31px;
+  background-image: url("/images/privacy_touch_apple_id.png");
+  transform: translate(533px, 485px);
+}
+
+/* ACCESSIBILITY */
+.accessibility {
+  margin-top: 266px;
+  margin-bottom: 170px;
+}
+.accessibility h1 {
+  width: 382px;
+  height: 270px;
+  background-image: url("/images/accessibility_headline.png");
+}
+.accessibility .infos {
+  margin-top: 20px;
+}
+.accessibility figure {
+  transform: translate(470px, -620px);
+}
+
+/* AR */
+.ar {
+  background-color: #f5f5f5;
+  padding: 20px 20px 0;
+}
+.ar .whitebox {
+  padding-bottom: 0;
+}
+.ar .whitebox > .inner {
+  display: flex;
+}
+.ar .whitebox > .inner > div {
+  max-width: 410px;
+  margin-top: 60px;
+  margin-right: 90px;
+}
+
+/* Eviroment */
+.environment {
+  padding: 20px 20px 0;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+.environment .icon {
+  margin-left: auto;
+  margin-right: auto;
+}
+.environment h1 {
+  color: #03a10e;
+}
+
+/* ACCESSORY SHOP */
+.accessory-shop {
+  background-color: #f5f5f5;
+  text-align: center;
+}
+.accessory-shop > .whitebox {
+  padding-bottom: 0;
+}
+.accessory-shop > .whitebox > .inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.accessory-shop > .whitebox > .inner img {
+  margin-top: 50px;
+}
+
+/* TRADE */
+.trade {
+  padding: 20px 20px 0;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+
+/* 38강 */
+/* FOOTER */
+footer {
+  background-color: #f5f5f5;
+}
+footer .buy-info {
+  padding: 76px 0;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  text-align: center;
+}
+footer .buy-info .icon {
+  width: 56px;
+  height: 56px;
+  margin: 0 auto 10px;
+}
+footer .buy-info h3 {
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: 600;
+}
+footer .buy-info p {
+  margin-bottom: 12px;
+  font-size: 14px;
+}
+footer .buy-info a.link {
+  font-size: 14px;
+}
+footer .warning {
+  padding: 18px 0 10px;
+  border-top: 1px solid #d2d2d2;
+  border-bottom: 1px solid #d2d2d2;
+}
+footer .warning ol {
+  list-style: decimal;
+  padding-left: 16px;
+}
+footer .warning li {
+  margin-bottom: 10px;
+  font-size: 11px;
+  line-height: 1.5;
+  color: #6e6e6e;
+}
+footer .breadcrumbs {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin: 20px 0;
+}
+footer .breadcrumbs a {
+  font-size: 12px;
+  color: #6e6e6e;
+  position: relative;
+}
+footer .breadcrumbs a.apple-logo {
+  width: 16px;
+  height: 16px;
+  background-image: url("/images/path_apple.svg");
+}
+footer .breadcrumbs a:hover {
+  text-decoration: underline;
+}
+footer .breadcrumbs a:not(:last-child)::after {
+  content: "";
+  width: 8px;
+  height: 18px;
+  background-image: url("/images/path_div.svg");
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -18px;
+  margin: auto;
+}
+footer .navigations {
+  margin-bottom: 40px;
+  height: 344px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+footer .navigations .map {
+  margin-top: 24px;
+}
+footer .navigations .map h3 {
+  font-size: 12px;
+  font-weight: 600;
+}
+footer .navigations .map li {
+  margin-top: 12px;
+  font-size: 12px;
+}
+footer .navigations .map li a {
+  color: #6e6e6e;
+}
+footer .navigations .map li a:hover {
+  text-decoration: underline;
+}
+footer .navigations .map:nth-child(6) {
+  padding-bottom: 100px;
+}
+footer .how-to-shop {
+  font-size: 12px;
+  line-height: 1.4;
+  color: #6e6e6e;
+}
+footer .how-to-shop a {
+  color: #81b9f1;
+}
+footer .how-to-shop a:hover {
+  text-decoration: underline;
+}
+footer .legal {
+  margin-top: 10px;
+  padding: 10px 0 40px;
+  border-top: 1px solid #d2d2d2;
+  display: flex;
+  gap: 50px;
+  font-size: 12px;
+  color: #6e6e6e;
+}
+footer .legal ul {
+  flex-grow: 1;
+  display: flex;
+  gap: 21px;
+}
+footer .legal ul li {
+  position: relative;
+}
+footer .legal ul li:hover a {
+  text-decoration: underline;
+}
+footer .legal ul li:not(:last-child)::after {
+  content: "|";
+  position: absolute;
+  right: -11px;
+  color: #d2d2d2;
 }
 
 /* animation keyframes */
