--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@ $color-darkgray: #6e6e6e;
 $color-lightgray: #f5f5f5;
 $color-border: #d2d2d2;
 $color-header: #3a3a3a;
+$color-section: #f5f5f5;
 $color-shadow: #00000040;
 
 %flex-center {
@@ -55,6 +56,12 @@ img {
 
 p {
   line-height: 1.6;
+}
+
+sup {
+  margin-right: 6px;
+  font-size: .7em;
+  vertical-align: top;
 }
 
 .inner {
@@ -131,60 +138,103 @@ a.link::after {
   flex-direction: column;
   position: relative;
   z-index: 1;
-
+  
   .infos--center {
     justify-content: center;
   }
-
+  
   .infos--end {
     justify-content: flex-end;
   }
+} 
+/* camera stage는 infos 미사용으로 info 별도 관리 */
+.info {
+  max-width: 330px;
+  margin-bottom: 24px;
+  opacity: 0;
+  transition: 1s;
+  transform: translate(0, 100px);
 
-  .info {
-    max-width: 330px;
-    margin-bottom: 24px;
-    opacity: 0;
-    transition: 1s;
-    transform: translate(0, 100px);
-
-    .icon {
-      width: 100px;
-      height: 100px;
-      margin: 0 0 -15px -30px;
-      animation: sprite-icon 3s steps(1) infinite;
-    }
-    
-    .icon.icon--chip         { background-image: url("../images/sprite_chip.png"); }
-    .icon.icon--faster       { background-image: url("../images/sprite_faster.png"); }
-    .icon.icon--neural       { background-image: url("../images/sprite_neural.png"); }
-    .icon.icon--apps         { background-image: url("../images/sprite_apps.png"); }
-    .icon.icon--battery      { background-image: url("../images/sprite_battery.png"); }
-    .icon.icon--display      { background-image: url("../images/sprite_display.png"); }
-    .icon.icon--true-tone    { background-image: url("../images/sprite_true_tone.png"); }
-    .icon.icon--center-stage { background-image: url("../images/sprite_center_stage.png"); }
-    .icon.icon--front-camera { background-image: url("../images/sprite_front_camera.png"); }
-    .icon.icon--back-camera  { background-image: url("../images/sprite_back_camera.png"); }
-    .icon.icon--scan         { background-image: url("../images/sprite_scan.png"); }
-    .icon.icon--download     { background-image: url("../images/sprite_download.png"); }
-    .icon.icon--wifi         { background-image: url("../images/sprite_wifi.png"); }
-    .icon.icon--lte          { background-image: url("../images/sprite_lte.png"); }
-    .icon.icon--pencil       { background-image: url("../images/sprite_pencil.png"); }
-    .icon.icon--keyboard     { background-image: url("../images/sprite_keyboard.png"); }
-    .icon.icon--notes        { background-image: url("../images/sprite_notes.png"); }
-    .icon.icon--covers       { background-image: url("../images/sprite_covers.png"); }
-
-    p {
-      font-size: 21.5px;
-      font-weight: 600;
-      line-height: 1.5;
-    }
+  .icon {
+    width: 100px;
+    height: 100px;
+    margin: 0 0 -15px -30px;
+    animation: sprite-icon 3s steps(1) infinite;
   }
-  .info.show {
-    transform: translate(0, 0);
-    opacity: 1;
+  
+  .icon.icon--chip         { background-image: url("../images/sprite_chip.png"); }
+  .icon.icon--faster       { background-image: url("../images/sprite_faster.png"); }
+  .icon.icon--neural       { background-image: url("../images/sprite_neural.png"); }
+  .icon.icon--apps         { background-image: url("../images/sprite_apps.png"); }
+  .icon.icon--battery      { background-image: url("../images/sprite_battery.png"); }
+  .icon.icon--display      { background-image: url("../images/sprite_display.png"); }
+  .icon.icon--true-tone    { background-image: url("../images/sprite_true_tone.png"); }
+  .icon.icon--center-stage { background-image: url("../images/sprite_center_stage.png"); }
+  .icon.icon--front-camera { background-image: url("../images/sprite_front_camera.png"); }
+  .icon.icon--back-camera  { background-image: url("../images/sprite_back_camera.png"); }
+  .icon.icon--scan         { background-image: url("../images/sprite_scan.png"); }
+  .icon.icon--download     { background-image: url("../images/sprite_download.png"); }
+  .icon.icon--wifi         { background-image: url("../images/sprite_wifi.png"); }
+  .icon.icon--lte          { background-image: url("../images/sprite_lte.png"); }
+  .icon.icon--pencil       { background-image: url("../images/sprite_pencil.png"); }
+  .icon.icon--keyboard     { background-image: url("../images/sprite_keyboard.png"); }
+  .icon.icon--notes        { background-image: url("../images/sprite_notes.png"); }
+  .icon.icon--covers       { background-image: url("../images/sprite_covers.png"); }
+
+  p {
+    font-size: 21.5px;
+    font-weight: 600;
+    line-height: 1.5;
+  }
+
+  a.link {
+    display: block;
+    margin-top: 44px;
+    font-size: 19.5px;
+  }
+}
+.info.show {
+  transform: translate(0, 0);
+  opacity: 1;
+}
+.infos--large {
+  .info {
+    max-width: 440px;
   }
 }
 
+/* White box */
+.whitebox {
+  max-width: 1386px;
+  margin: 0 auto;
+  padding: 100px 30px;
+  border-radius: 30px;
+  box-sizing: border-box;
+  background-color: #fff;
+
+  .icon {
+    margin-bottom: 20px;
+  }
+
+  h1 {
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 1.3;
+  }
+
+  p {
+    margin-top: 20px;
+    font-size: 19px;
+  }
+
+  a.link {
+    display: block;
+    margin-top: 26px;
+  }
+}
+.whitebox--transparent {
+  background-color: transparent;
+}
 
 
 /* HEADER */
@@ -484,13 +534,17 @@ nav {
 }
 
 
+/* MAIN */
+main {
+  overflow-x: hidden;
+}
+
 /* HERO */
 .hero {
   background-color: $color-lightgray;
 
   > .inner {
     padding-bottom: 110px;
-    overflow: hidden;
 
     > h1 {
       width: 221px;
@@ -620,6 +674,680 @@ nav {
   }
 }
 
+
+/* DISPLAY */
+.display {
+  margin-top: 450px;
+
+  .notes {
+    h1 {
+      width: 630px;
+      height: 370px;
+      background-image: url("/images/display_headline.png");
+      transform: translate(104px, 0);
+    }
+
+    .figures {
+      height: 814px;
+      margin-top: 26px;
+
+      figcaption {
+        width: 145px;
+        height: 45px;
+        background-image: url("/images/display_notes_caption.png");
+        transform: translate(707px, -16px);
+      }
+    }
+  }
+
+  .shareplay {
+    margin-top: 55px;
+
+    .figures {
+      height: 630px;
+
+      figure {
+        transform: translate(-360px, 0);
+
+        figcaption {
+          width: 110px;
+          height: 48px;
+          background-image: url("/images/display_shareplay_caption.png");
+          transform: translate(300px, 658px);
+        }
+      }
+    }
+  }
+}
+
+
+/* CAMERA */
+.camera {
+  margin-top: 303px;
+
+  .stage {
+    position: relative;
+
+    h1 {
+      width: 650px;
+      height: 450px;
+      background-image: url("/images/camera_headline.png");
+      transform: translate(-25px, 0);
+    }
+
+    .info {  
+      position: absolute;
+      top: 150px;
+      right: 0;
+    }
+
+    .figures {
+      height: 770px;
+      margin-top: 24px;
+
+      figure {
+        transform: translate(90px, 0);
+
+        video {
+          position: absolute;
+          top: 36px;
+          left: 76px;
+          -webkit-mask-image: url("/images/camera_video_mask.png");
+          mask-image: url("/images/camera_video_mask.png");
+        }
+
+        .controller--play, .controller--pause {
+          color: $color-blue;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          transform: translate(428px, -134px) rotate(-3deg);
+        }
+        .controller--play:hover, .controller--pause:hover {
+          text-decoration: underline;
+        }
+        .controller--play.hide, .controller--pause.hide {
+          display: none;
+        }
+        .controller--play img, .controller--pause img {
+          width: 20px;
+          margin-top: -2px;
+        }
+
+        figcaption {
+          width: 130px;
+          height: 110px;
+          background-image: url("/images/camera_hardware_caption.png");
+          transform: translate(-116px, 383px);
+        }
+      }
+    }
+  }
+
+  .edit {
+    .figures {
+      height: 910px;
+
+      figure {
+        transform: translate(20px, 0);
+
+        figcaption {
+          width: 130px;
+          height: 47px;
+          background-image: url("/images/camera_edit_caption.png");
+          transform: translate(27px, 905px);
+        }
+      }
+    }
+  }
+}
+
+
+/* WIRELESS */
+.wireless {
+  margin-top: 202px;
+
+  .facetime {
+    h1 {
+      width: 730px;
+      height: 330px;
+      background-image: url("/images/wireless_headline.png");
+      transform: translate(104px, 0);
+    }
+
+    .figures {
+      height: 773px;
+
+      figure {
+        transform: translate(-68px, 0);
+        
+        figcaption {
+          width: 139px;
+          height: 46px;
+          background-image: url("/images/wireless_facetime_caption.png");
+          transform: translate(843px, -49px);
+        }
+      }
+    }
+  }
+
+  .files {
+    figure {
+      transform: translate(34px, -34px);
+      
+      figcaption {
+        width: 127px;
+        height: 46px;
+        background-image: url("/images/wireless_files_caption.png");
+        transform: translate(96px, 639px);
+      }
+    }
+  }
+}
+
+
+/* ACCESSORIES */
+.accessories {
+  margin-top: 195px;
+
+  h1 {
+    width: 550px;
+    height: 343px;
+    background-image: url("/images/accessibility_headline.png");
+    margin: 0 auto;
+  }
+
+  .figures {
+    height: 1021px;
+    margin-top: 34px;
+
+    figure {
+      transform: translate(-24px, 0);
+      
+      figcaption {
+        .caption-memo {
+          width: 169px;
+          height: 41px;
+          background-image: url("/images/accessories_caption_memo.png");
+          transform: translate(790px, -52px);
+        }
+
+        .caption-supports {
+          width: 200px;
+          height: 70px;
+          background-image: url("/images/accessories_caption_supports.png");
+          transform: translate(163px, 821px);
+        }
+      }
+    }
+  }
+
+  .infos {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+
+/* iPadOS */
+.ipados {
+  margin-top: 212px;
+
+  h1 {
+    width: 530px;
+    height: 440px;
+    margin: 0 auto;
+    background-image: url("/images/ipados_headline.png");
+  }
+
+  .infos {
+    margin-top: 44px;
+    align-items: flex-end;
+  }
+
+  .figures {
+    height: 782px;
+    display: flex;
+
+    > div {
+      flex-grow: 1;
+      position: relative;
+  
+      figure {
+        transform: translate(-205px, -312px);
+
+        figcaption {
+          width: 163px;
+          height: 53px;
+          background-image: url("/images/ipados_split_view_caption.png");
+          transform: translate(200px, -38px);
+        }
+      }
+    }
+
+    .figure-split-view figure {
+      transform: translate(-205px, -312px);
+
+      figcaption {
+        width: 163px;
+        height: 53px;
+        background-image: url("/images/ipados_split_view_caption.png");
+        transform: translate(200px, -38px);
+      }
+    }
+
+    .figure-widgets figure {
+      transform: translate(237px, 43px);
+
+      figcaption {
+        width: 161px;
+        height: 46px;
+        background-image: url("/images/ipados_widgets_caption.png");
+        transform: translate(257px, 497px);
+      }
+    }
+
+    .figure-quick-note figure {
+      transform: translate(-625px, 232px);
+
+      figcaption {
+        width: 82px;
+        height: 97px;
+        background-image: url("/images/ipados_quick_note_caption.png");
+        transform: translate(511px, 470px);
+      }
+    }
+  }
+}
+
+
+/* APPS */
+.apps {
+  margin-top: 368px;
+
+  h1 {
+    width: 500px;
+    height: 264px;
+    background-image: url("/images/apps_headline.png");
+    transform: translate(17px, 0);
+  }
+
+  .infos {
+    margin-top: 36px;
+    margin-bottom: 82px;
+  }
+
+  .figures {
+    display: flex;
+    height: 788px;
+
+    > div {
+      flex-grow: 1;
+      position: relative;
+    }
+
+    .figure-masterclass {      
+      figure {
+        transform: translate(578px, -431px);
+
+        figcaption {
+          width: 100px;
+          height: 25px;
+          background-image: url("/images/apps_masterclass_caption.png");
+          transform: translate(26px, 690px);
+        }
+      }
+    }
+    
+    .figure-adobe {      
+      figure {
+        transform: translate(-515px, 85px);
+
+        figcaption {
+          width: 105px;
+          height: 24px;
+          background-image: url("/images/apps_adobe_caption.png");
+          transform: translate(544px, 514px);
+        }
+      }
+    }
+    
+    .figure-fantasian {      
+      figure {
+        transform: translate(-103px, 318px);
+
+        figcaption {
+          width: 74px;
+          height: 22px;
+          background-image: url("/images/apps_fantasian_caption.png");
+          transform: translate(24px, 483px);
+        }
+      }
+    }
+    
+    .figure-books {      
+      figure {
+        transform: translate(-133px, -150px);
+
+        figcaption {
+          width: 50px;
+          height: 27px;
+          background-image: url("/images/apps_books_caption.png");
+          transform: translate(397px, 707px);
+        }
+      }
+    }
+    
+    .figure-goodnotes {      
+      figure {
+        transform: translate(-93px, 68px);
+
+        figcaption {
+          width: 99px;
+          height: 26px;
+          background-image: url("/images/apps_goodnotes_caption.png");
+          transform: translate(24px, 690px);
+        }
+      }
+    }
+  }
+}
+
+
+/* PRIVACY */
+.privacy {
+  margin-top: 238px;
+
+  h1 {
+    width: 482px;
+    height: 237px;
+    margin-left: auto;
+    background-image: url("/images/power_headline.png");
+    position: relative;
+    z-index: 1;
+    transform: translate(57px, 0);
+  }
+
+  .infos {
+    margin-top: 38px;
+    align-items: flex-end;
+    position: relative;
+    z-index: 1;
+  }
+
+  figure {
+    transform: translate(-215px, -500px);
+
+    figcaption {
+      .caption-apple-id {
+        width: 170px;
+        height: 26px;
+        background-image: url("/images/privacy_caption_apple_id.png");
+        transform: translate(195px, -13px);
+      }
+
+      .caption-touch-id {
+        width: 150px;
+        height: 31px;
+        background-image: url("/images/privacy_touch_apple_id.png");
+        transform: translate(533px, 485px);
+      }
+    }
+  }
+}
+
+
+/* ACCESSIBILITY */
+.accessibility {
+  margin-top: 266px;
+  margin-bottom: 170px;
+
+  h1 {
+    width: 382px;
+    height: 270px;
+    background-image: url("/images/accessibility_headline.png");
+  }
+
+  .infos {
+    margin-top: 20px;
+  }
+
+  figure {
+    transform: translate(470px, -620px);
+  }
+}
+
+
+/* AR */
+.ar {
+  background-color: $color-section;
+  padding: 20px 20px 0;
+
+  .whitebox {
+    padding-bottom: 0;
+
+    > .inner {
+      display: flex;
+
+      > div {
+        max-width: 410px;
+        margin-top: 60px;
+        margin-right: 90px;
+      }
+    }
+  }
+}
+
+
+/* Eviroment */
+.environment {
+  padding: 20px 20px 0;
+  background-color: $color-section;
+  text-align: center;
+
+  .icon {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  h1 {
+    color: #03a10e;
+  }
+}
+
+
+/* ACCESSORY SHOP */
+.accessory-shop {
+  background-color: $color-section;
+  text-align: center;
+
+  > .whitebox {
+    padding-bottom: 0;
+
+    > .inner {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        margin-top: 50px;
+      }
+    }
+  }
+}
+
+
+/* TRADE */
+.trade {
+  padding: 20px 20px 0;
+  background-color: $color-section;
+  text-align: center;
+}
+
+
+/* 38강 */
+
+
+/* FOOTER */
+footer {
+  background-color: $color-section;
+
+  .buy-info {
+    padding: 76px 0;
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    text-align: center;
+
+    .icon {
+      width: 56px;
+      height: 56px;
+      margin: 0 auto 10px;
+    }
+
+    h3 {
+      margin-bottom: 8px;
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    p {
+      margin-bottom: 12px;
+      font-size: 14px;
+    }
+
+    a.link {
+      font-size: 14px;
+    }
+  }
+
+  .warning {
+    padding: 18px 0 10px;
+    border-top: 1px solid $color-border;
+    border-bottom: 1px solid $color-border;
+
+    ol {
+      list-style: decimal;
+      padding-left: 16px;
+    }
+
+    li {
+      margin-bottom: 10px;
+      font-size: 11px;
+      line-height: 1.5;
+      color: $color-darkgray;
+    }
+  }
+
+  .breadcrumbs {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin: 20px 0;
+
+    a {
+      font-size: 12px;
+      color: $color-darkgray;
+      position: relative;
+    }
+    a.apple-logo {
+      width: 16px;
+      height: 16px;
+      background-image: url("/images/path_apple.svg");
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    a:not(:last-child)::after {
+      content: "";
+      width: 8px;
+      height: 18px;
+      background-image: url("/images/path_div.svg");
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: -18px;
+      margin: auto;
+    }
+  }
+
+  .navigations {
+    margin-bottom: 40px;
+    height: 344px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-between;
+
+    .map {
+      margin-top: 24px;
+
+      h3 {
+        font-size: 12px;
+        font-weight: 600;
+      }
+
+      li {
+        margin-top: 12px;
+        font-size: 12px;
+
+        a {
+          color: $color-darkgray;  
+        }
+        a:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    .map:nth-child(6) {
+      padding-bottom: 100px;
+    }
+  }
+
+  .how-to-shop {
+    font-size: 12px;
+    line-height: 1.4;
+    color: $color-darkgray;
+
+    a {
+      color: $color-lightblue;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .legal {
+    margin-top: 10px;
+    padding: 10px 0 40px;
+    border-top: 1px solid $color-border;
+    display: flex;
+    gap: 50px;
+    font-size: 12px;
+    color: $color-darkgray;
+
+    ul {
+      flex-grow: 1;
+      display: flex;
+      gap: 21px;
+
+      li {
+        position: relative;
+      }
+      li:hover a {
+        text-decoration: underline;
+      }
+      li:not(:last-child)::after {
+        content: "|";
+        position: absolute;
+        right: -11px;
+        color: $color-border;
+      }
+    }
+  }
+}
 
 
 
